fix(deploy): alter name of project

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,7 +141,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.codepushtest"
+        applicationId "com.marcaocodepushtest"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
